# envdiff_fresh

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  envdiff.py  envset.py  pyproject.toml  setup.cfg
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  prerelease.yml  release.yml
envdiff_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: example.env  example.yaml  source.yml  target.env  target_config.py
tests/: conftest.py  test_cli_integration.py  test_coverage.py  test_envset_configpy.py  test_parsers_and_patch.py
