[metadata]
name = envdiff-tool
version = 0.1.1
description = Diff & patch environment configs across local/remote (.env, YAML, config.py) plus single-key editor.
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = envdiff, envset
python_requires = >=3.8
install_requires =
    PyYAML>=6.0

[options.entry_points]
console_scripts =
    envdiff = envdiff:main
    envset = envset:main
